@@ -4,6 +4,9 @@ UNRELEASED CHANGES
     is already mounted rather than just relying on flags in the
     backend.
 
+  * Fixed a busy loop, where mount.s3ql would perform normally but
+    consume much more CPU than needed.
+
 2018-06-09, S3QL 2.27.1
 
   * Fixed a test failure in tests/t1_dump.py
